tests/baselines/reference/compoundArithmeticAssignmentLHSCanBeAssigned.errors.txt
compoundArithmeticAssignmentLHSCanBeAssigned.ts(11,7): error TS18050: The value 'null' cannot be used here.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(12,7): error TS18050: The value 'undefined' cannot be used here.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(18,7): error TS18050: The value 'null' cannot be used here.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(19,7): error TS18050: The value 'undefined' cannot be used here.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(22,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(23,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(24,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(25,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(25,7): error TS18050: The value 'null' cannot be used here.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(26,1): error TS2322: Type 'number' is not assignable to type 'E'.
compoundArithmeticAssignmentLHSCanBeAssigned.ts(26,7): error TS18050: The value 'undefined' cannot be used here.


==== compoundArithmeticAssignmentLHSCanBeAssigned.ts (11 errors) ====
    enum E { a, b, c }
    
    var a: any;
    var b: number;
    var c: E;
    
    var x1: any;
    x1 *= a;
    x1 *= b;
    x1 *= c;
    x1 *= null;
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x1 *= undefined;
          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x2: number;
    x2 *= a;
    x2 *= b;
    x2 *= c;
    x2 *= null;
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x2 *= undefined;
          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x3: E;
    x3 *= a;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    x3 *= b;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    x3 *= c;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
    x3 *= null;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x3 *= undefined;
    ~~
!!! error TS2322: Type 'number' is not assignable to type 'E'.
          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.